force-app/main/default/objects/Aspirant__c/Aspirant__c.object-meta.xml
<CustomObject>
    <description>The records for all the employees those who want to enroll themselves for the certification.</description>
    <label>Aspirant</label>
    <nameField>
        <label>Aspirant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aspirants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>