force-app/main/default/objects/Aspirant__c/fields/Aspirant_ID__c.field-meta.xml
<CustomField>
    <fullName>Aspirant_ID__c</fullName>
    <label>Aspirant ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>