force-app/main/default/objects/Aspirant__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>