force-app/main/default/objects/Aspirant__c/fields/Primary_Skill__c.field-meta.xml
<CustomField>
    <fullName>Primary_Skill__c</fullName>
    <label>Primary Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adminstration</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Javascript</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>