force-app/main/default/objects/Aspirant__c/fields/Secondary_Skill__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Skill__c</fullName>
    <label>Secondary Skill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Web development</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>