force-app/main/default/objects/Aspirant__c/recordTypes/Product_Based.recordType-meta.xml
<RecordType>
    <fullName>Product_Based</fullName>
    <active>true</active>
    <label>Product Based</label>
</RecordType>