force-app/main/default/objects/Aspirant__c/recordTypes/Service_Based.recordType-meta.xml
<RecordType>
    <fullName>Service_Based</fullName>
    <active>true</active>
    <label>Service Based</label>
</RecordType>